--- a/memory.html
+++ b/memory.html
@@ -18,12 +18,12 @@
             name: {value:""},
             typefilter: {value:""},
             namefilter: {value:""},
-            tabfilter: {value:""},
             idfilter: {value:""},
-            activefilter: {value:true},
+            tabidfilter: {value:""},
+            topCount: {value:0},
+            sort: {value:"size"},
             analysecontext: {value:false},
             separatemsg: {value:false},
-            top5: {value:true},
             sum: {value:false}
         },        
         inputs:1,
@@ -31,6 +31,11 @@
         icon: "fluid.png",
         label: function() {
             return this.name||"Memory";
+        },
+        oneditprepare: function() { 
+        debugger;
+            RED.nodes.filterNodes({});
+        
         }
     });
 </script>
@@ -38,35 +43,39 @@
 <script type="text/x-red" data-template-name="memory-analyser">
     <div class="form-row">
         <label for="node-input-typefilter"><i class="fa fa-filter"></i> Type filter</label>
-        <input type="text" id="node-input-typefilter" placeholder="Type">
+        <input type="text" id="node-input-typefilter" placeholder="Node type (incl. wildcard *)">
     </div>
     <div class="form-row">
         <label for="node-input-namefilter"><i class="fa fa-filter"></i> Name filter</label>
-        <input type="text" id="node-input-namefilter" placeholder="Name">
-    </div>
-    <div class="form-row">
-        <label for="node-input-tabfilter"><i class="fa fa-filter"></i> Tab filter</label>
-        <input type="text" id="node-input-tabfilter" placeholder="Tab">
+        <input type="text" id="node-input-namefilter" placeholder="Node name (incl. wildcard *)">
     </div>
     <div class="form-row">
         <label for="node-input-idfilter"><i class="fa fa-filter"></i> Id filter</label>
-        <input type="text" id="node-input-idfilter" placeholder="Tab">
+        <input type="text" id="node-input-idfilter" placeholder="Node id (incl. wildcard *)">
+    </div>
+    <div class="form-row">
+        <label for="node-input-tabidfilter"><i class="fa fa-filter"></i> Tab id filter</label>
+        <input type="text" id="node-input-tabidfilter" placeholder="Tab id (incl. wildcard *)">
+    </div>
+    <div class="form-row">
+        <label for="node-input-topCount"><i class="fas fa-arrows-alt-h"></i> Top count</label>
+        <input type="number" id="node-input-topCount" step="1" min="0">
+    </div>
+    <div class="form-row">
+        <label for="node-input-sort"><i class="fa fa-sort-amount-desc"></i> Sort</label>
+        <select id="node-input-sort">
+            <option value="size">By node size</option>
+            <option value="name">By node name</option>
+            <option value="type">By node type</option>            
+        </select>
     </div>
     <div class="form-row">  
         <input type="checkbox" id="node-input-analysecontext" style="display: inline-block; width: auto; vertical-align: top;">
         <label for="node-input-analysecontext" style="width:70%;" disabled="disabled"> Analyse node context memory</label> 
     </div>
     <div class="form-row">
-        <input type="checkbox" id="node-input-activefilter" style="display: inline-block; width: auto; vertical-align: top;" disabled>
-        <label for="node-input-activefilter" style="width:70%;"> Only list active nodes</label>
-    </div> 
-    <div class="form-row">
         <input type="checkbox" id="node-input-separatemsg" style="display: inline-block; width: auto; vertical-align: top;">
         <label for="node-input-separatemsg" style="width:70%;"> Separate message per node</label>
-    </div>
-    <div class="form-row">
-        <input type="checkbox" id="node-input-top5" style="display: inline-block; width: auto; vertical-align: top;">
-        <label for="node-input-top5" style="width:70%;"> Restrict to top 5 memory consumers</label>
     </div>
     <div class="form-row">
         <input type="checkbox" id="node-input-sum" style="display: inline-block; width: auto; vertical-align: top;">
@@ -81,8 +90,24 @@
 
 <script type="text/x-red" data-help-name="memory-analyser">
     <p>A Node-RED node to get memory used by Node-RED.</p>
-    <p><strong>Type:</strong><br/>
-    Optionally a regular expression can be specified, to filter by type.
+    <p><strong>Type filter:</strong><br/>
+    Limit the memory analyses to nodes having the specified node type(s).  A <code>*</code> wildcard character is allowed.</p>
+    <p><strong>Name filter:</strong><br/>
+    Limit the memory analyses to nodes having the specified node name(s).  A <code>*</code> wildcard character is allowed.</p>
+    <p><strong>Id filter:</strong><br/>
+    Limit the memory analyses to nodes having the specified node id(s).  A <code>*</code> wildcard character is allowed.</p>
+    <p><strong>Tab id filter:</strong><br/>
+    Limit the memory analyses to nodes located on the specified tab id(s).  A <code>*</code> wildcard character is allowed.</p>
+    <p><strong>Top count:</strong><br/>
+    Limit the output to only the specified number of nodes with the largest size. When no value or 0 value, all available nodes will be analyzed.</p>
+    <p><strong>Sort:</strong><br/>
+    Sort the node list by node name, node type or node memory size (descending).</p>
+    <p><strong>Analyze node context memory:</strong><br/>
+    When selected, the node's context memory size will also be analyzed.  Caution: the size of the data stored by the node on flow and global context memory will <strong>NOT</strong> be included!</p>
+    <p><strong>Separate message per node:</strong><br/>
+    When selected, a separate message will be send for every specified node.  Otherwise a single message will be send, which contains the memory analysis of all the specified nodes.</p>
+    <p><strong>Calculate total used memory:</strong><br/>
+    When selected, the total memory of all specified nodes will be summed.  So all selected nodes, not only the specified top N nodes!</p>
     <p><strong>Name:</strong><br/>
     Optionally a regular expression can be specified, to filter by name (for nodes) or label (for tabsheets).
 </script>
