Info panel typo

--- a/memory.html
+++ b/memory.html
@@ -98,7 +98,7 @@
     Limit the memory analyses to nodes having the specified node id(s).  A <code>*</code> wildcard character is allowed.</p>
     <p><strong>Tab id filter:</strong><br/>
     Limit the memory analyses to nodes located on the specified tab id(s).  A <code>*</code> wildcard character is allowed.</p>
-    <p><strong>Tab id filter:</strong><br/>
+    <p><strong>Exclude id filter:</strong><br/>
     Exclude specific nodes from analysis.  A <code>*</code> wildcard character is allowed.</p>
     <p><strong>Top count:</strong><br/>
     Limit the output to only the specified number of nodes with the largest size. When no value or 0 value, all available nodes will be analyzed.</p>
