Removed wrong 'name' explanation

--- a/memory.html
+++ b/memory.html
@@ -107,8 +107,6 @@
     <p><strong>Separate message per node:</strong><br/>
     When selected, a separate message will be send for every specified node.  Otherwise a single message will be send, which contains the memory analysis of all the specified nodes.</p>
     <p><strong>Calculate total used memory:</strong><br/>
-    When selected, the total memory of all specified nodes will be summed.  So all selected nodes, not only the specified top N nodes!</p>
-    <p><strong>Name:</strong><br/>
-    Optionally a regular expression can be specified, to filter by name (for nodes) or label (for tabsheets).
+    When selected, the total memory of all specified nodes will be summed.  This means memory from **all** selected nodes, not only the specified top N nodes!</p>
 </script>
 
